# git

./: .gitattributes  .gitignore  GIT-BUILD-OPTIONS.in  GIT-VERSION-GEN  Hilalqr-kod  Makefile  add-interactive.c  add-interactive.h  add-patch.c  add-patch.h  advice.c  advice.h  alias.h  apply.c  archive-tar.c  archive-zip.c  attr.c  attr.h  bisect.c  blame.c  bloom.h  branch.c  build_rust.sh  builtin.h  bulk-checkin.c  cache-tree.c  cache.h  color.c  color.h  combine-diff.c  command-list.txt  commit-graph.c  commit-graph.h  commit-reach.c  commit-reach.h  commit.c  config.c  config.h  config.mak.uname  connect.c  (+148 more)
.github/workflows/: c-cpp.yml  cevap pp  main.yml
Documentation/: BreakingChanges.adoc  BreakingChanges.txt  CodingGuidelines  Makefile  MyFirstContribution.adoc  MyFirstContribution.txt  SubmittingPatches  config.adoc  config.txt  diff-format.adoc  diff-options.adoc  fetch-options.adoc  format-patch-caveats.adoc  fsck-msgids.adoc  git-add.adoc  git-am.adoc  git-bisect.adoc  git-branch.adoc  git-cat-file.adoc  git-checkout.adoc  git-checkout.txt  git-commit.adoc  git-config.adoc  git-daemon.adoc  git-fast-import.adoc  git-fetch.adoc  git-for-each-ref.adoc  git-format-patch.adoc  git-gc.txt  git-grep.adoc  git-hash-object.adoc  git-history.adoc  git-hook.adoc  git-http-fetch.adoc  git-imap-send.adoc  git-interpret-trailers.adoc  git-last-modified.adoc  git-notes.adoc  git-notes.txt  git-pack-objects.adoc  (+43 more)
Documentation/config/: advice.adoc  alias.txt  bitmap-pseudo-merge.txt  branch.adoc  checkout.txt  core.txt  diff.txt  extensions.adoc  (+13 more)
builtin/: add.c  am.c  bisect.c  blame.c  branch.c  cat-file.c  checkout.c  clone.c  commit.c  config.c  count-objects.c  describe.c  diff-index.c  difftool.c  fast-import.c  fetch.c  fsck.c  fsmonitor--daemon.c  gc.c  grep.c  history.c  hook.c  index-pack.c  init-db.c  interpret-trailers.c  last-modified.c  log.c  ls-files.c  multi-pack-index.c  notes.c  pack-objects.c  pack-redundant.c  push.c  rebase.c  receive-pack.c  reflog.c  refs.c  remote.c  repack.c  replay.c  (+15 more)
ci/: install-rust.sh  lib.sh
compat/: basename.c  mingw.c  mingw.h  msvc.h  posix.h  pread.c  writev.c
contrib/libgit-sys/: Cargo.toml  build.rs
gitweb/: gitweb.perl  meson.build
gitweb/static/: meson.build
lib/: advice.c  apply.c  branch.c  commit-reach.c  connected.c  diff-lib.c  environment.c  graph.c  loose.c  odb.c  odb.h  packfile.c  path.c  remote.c  replay.c  replay.h  revision.c  sequencer.c  setup.c
odb/: source-files.c  source-files.h  source-inmemory.c  source-loose.c  source-packed.c  source-packed.h  source.h  streaming.c  streaming.h  transaction.c  transaction.h
perl/: meson.build
perl/FromCPAN/: meson.build
perl/FromCPAN/Mail/: meson.build
perl/Git/: meson.build
perl/Git/LoadCPAN/: meson.build
perl/Git/LoadCPAN/Mail/: meson.build
perl/Git/SVN/: meson.build
perl/Git/SVN/Memoize/: meson.build
po/: meson.build
refs/: files-backend.c  packed-backend.c  ref-cache.c  refs-internal.h  reftable-backend.c
reftable/: basics.c  basics.h  block.c  fsck.c  merged.c  reader.c  reader.h  record.c  reftable-fsck.h  reftable-stack.h  reftable-tests.h  reftable-writer.h  stack.c  stack_test.c  system.h
src/: varint.rs
t/: README  greplint.pl  lib-git-daemon.sh  lib-git-svn.sh  lib-gpg.sh  lib-httpd.sh  lib-shell-parser.pl  lib-verify-submodule-gitdir-path.sh  meson.build  pack-refs-tests.sh  t0000-basic.sh  t0005-signals.sh  t0007-git-var.sh  t0008-ignores.sh  t0040-parse-options.sh  t0213-trace2-ancestry.sh  t0600-reffiles-backend.sh  t0610-reftable-basics.sh  t0614-reftable-fsck.sh  t1006-cat-file.sh  t1007-hash-object.sh  t1017-cat-file-remote-object-info.sh  t1091-sparse-checkout-builtin.sh  t1092-sparse-checkout-compatibility.sh  t1300-config.sh  t1305-config-include.sh  t1306-xdg-files.sh  t1311-config-optional.sh  t1400-update-ref.sh  t1421-reflog-write.sh  t1423-ref-backend.sh  t1464-refs-delete.sh  t1466-refs-create.sh  t1467-refs-rename.sh  t1517-outside-repo.sh  t1800-hook.sh  t1900-repo-info.sh  t1900-repo.sh  t2400-worktree-add.sh  t3200-branch.sh  (+98 more)
templates/: Makefile  meson.build
trace2/: tr2_dst.c  tr2_dst.h  tr2_tbuf.c
xdiff/: xdiff.h  xdiffi.c  xemit.c  xmerge.c  xpatience.c  xprepare.c  xtypes.h  xutils.c
(+58 files in other folders)
