[package]
name = "libgit-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "gitpub"
rust-version = "1.63" # TODO: Once we hit 1.84 or newer, we may want to remove Cargo.lock from
                      # version control. See https://lore.kernel.org/git/Z47jgK-oMjFRSslr@tapette.crustytoothpaste.net/
description = "Native bindings to a portion of libgit"
license = "GPL-2.0-only"
exclude = [
  "git-src/.github",
  "git-src/Documentation",
  "git-src/ci",
  "git-src/git-gui",
  "git-src/gitk-git",
  "git-src/gitweb",
  "git-src/oss-fuzz",
  "git-src/perl",
  "git-src/po",
  "git-src/t"
]

[lib]
path = "src/lib.rs"

[dependencies]
libz-sys = "1.1.19"

[build-dependencies]
autocfg = "1.4.0"
make-cmd = "0.1.0"
